# pantheon

./: .gitignore  README.md  pyproject.toml
.claude/: launch.json
docs/: ARCHITECTURE.md  DIMENSIONS.md  ROLES.md
frontend/: app.js  index.html  styles.css
frontend/mock/: run.js
pantheon/: __init__.py  __main__.py  config.py  llm.py  server.py
pantheon/agents/: __init__.py  analysts.py  managers.py  researchers.py  risk.py  schemas.py  structured.py  tools.py  trader.py
pantheon/data/: __init__.py  cache.py  errors.py  router.py
pantheon/data/providers/: __init__.py  alpha_vantage.py  fred.py  mock.py  polymarket.py  social.py  yfin.py
pantheon/graph/: __init__.py  build.py  conditional.py  run.py  state.py
